# casact.github.io

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy-docs.yml  update-metrics.yml  update-repos.yml
docs/: about.md  activities.md  conf.py  contributing.md  index.md  projects.md  resources.md
docs/_static/css/: custom.css
docs/_templates/: layout.html
scripts/: generate_metrics.py  generate_repo_listings.py  github_api.py
