[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "casact-github-io"
version = "0.1.0"
description = "Casualty Actuarial Society documentation site"
requires-python = ">=3.9"
dependencies = [
    "sphinx>=7.2",
    "pydata-sphinx-theme>=0.15",
    "myst-parser>=2.0",
    "sphinx-design>=0.5",
]

[project.optional-dependencies]
repos = [
    "requests>=2.31",
]
metrics = [
    "requests>=2.31",
    "matplotlib>=3.8",
]

[tool.setuptools]
packages = []
